specs/tla/WorkerDispatch_BugCounterExample.tlc.out
TLC2 Version 2.19 of 08 August 2024 (rev: 5a47802)
Warning: Please run the Java VM which executes TLC with a throughput optimized garbage collector by passing the "-XX:+UseParallelGC" property.
(Use the -nowarning option to disable this warning.)
Running breadth-first search Model-Checking with fp 6 and seed 1766139979203194749 with 1 worker on 10 cores with 11416MB heap and 64MB offheap memory [pid: 1549231] (Linux 6.17.0-22-generic amd64, Eclipse Adoptium 21.0.11 x86_64, MSBDiskFPSet, DiskStateQueue).
Parsing file /home/an/dev/ver/c3i/specs/tla/WorkerDispatch_BugCounterExample.tla
Parsing file /tmp/Naturals.tla
Parsing file /tmp/Sequences.tla
Parsing file /tmp/FiniteSets.tla
Parsing file /tmp/TLC.tla
Parsing file /home/an/dev/ver/c3i/specs/tla/WorkerDispatch.tla
Semantic processing of module Naturals
Semantic processing of module Sequences
Semantic processing of module FiniteSets
Semantic processing of module TLC
Semantic processing of module WorkerDispatch
Semantic processing of module WorkerDispatch_BugCounterExample
Starting... (2026-04-28 13:40:22)
Computing initial states...
Finished computing initial states: 1 distinct state generated at 2026-04-28 13:40:22.
Error: Invariant DispatcherRegistryConsistency is violated.
Error: The behavior up to this point is:
State 1: <Initial predicate>
/\ enqueued = <<>>
/\ outcomes = <<>>
/\ knownWorkers = {"a", "b", "c"}
/\ matchArms = [workers_rs |-> {"a", "b", "c"}, scheduler_rs |-> {"a", "b", "c", "gleam_run"}]

State 2: <Original!RegisterWorker line 33, col 1 to line 40, col 42 of module WorkerDispatch_BugCounterExample>
/\ enqueued = <<>>
/\ outcomes = <<>>
/\ knownWorkers = {"a", "b", "c", "gleam_run"}
/\ matchArms = [workers_rs |-> {"a", "b", "c"}, scheduler_rs |-> {"a", "b", "c", "gleam_run"}]

10 states generated, 10 distinct states found, 8 states left on queue.
The depth of the complete state graph search is 2.
Finished in 00s at (2026-04-28 13:40:22)
